log

Thu 14 Mar 2024 02:53:19 PM UTC: 
 exercises.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
857e251
Thu 14 Mar 2024 02:57:27 PM UTC: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
07e5c54
Thu 14 Mar 2024 03:00:42 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cbd3941
Thu 14 Mar 2024 03:01:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:30:21: error: expected expression before ‘<’ token
   30 |   for(int i = 0; i =< size/2; i++)
      |                     ^
Compilation failed
6dcb9c2
Thu 14 Mar 2024 03:02:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
c519b3a
Thu 14 Mar 2024 03:04:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cc5d17a
Thu 14 Mar 2024 03:05:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
9edcff4
Thu 14 Mar 2024 03:05:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
b6c46d1
Thu 14 Mar 2024 03:06:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
defa540
Thu 14 Mar 2024 03:09:41 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
c39ab69
Sat 16 Mar 2024 04:23:54 PM UTC: 
 exercises.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:102:37: error: expected identifier or ‘(’ before ‘}’ token
  102 |                                     }
      |                                     ^
Compilation failed
260fe0b
Sat 16 Mar 2024 04:24:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
e9107b7
